# comfyui_quilting

./: LICENSE  README.md  __init__.py  guess_block_size.py  install.py  make_seamless.py  make_seamless2.py  nodes.py  parallel_quilting.py  patch_search.py  pyproject.toml  quilting.py  requirements.txt  synthesis_subroutines.py  types.py  uninstall.py
jena2020/: generate.py  preprocess.py
misc/: bse_desc_util.py  bse_ft_util.py  bse_type_aliases.py  validation_utils.py
quilting/: generate.py
