[project]
name = "comfyui_quilting"
description = "image and latent quilting nodes for comfyui"
version = "2.0.0"
license = {text = "MIT License"}
dependencies = [
    "joblib~=1.3.2",
    "opencv-python~=4.8.1.78",
    "scikit-learn~=1.3.1",
]

[project.optional-dependencies]
recommended = [
    "pyastar2d==1.0.6",
]

[tool.setuptools]
packages = ["jena2020", "misc"]

[project.urls]
Repository = "https://github.com/bmad4ever/comfyui_quilting"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "bmad4ever"
DisplayName = "comfyui_quilting"
Icon = ""
